--- a/test/fixtures/albums.yml
+++ b/test/fixtures/albums.yml
@@ -1,14 +1,14 @@
 # == Schema Information
 #
-# Table name: users
+# Table name: albums
 #
-#  id              :bigint           not null, primary key
-#  user_name       :string           not null
-#  password_digest :string           not null
-#  session_token   :string           not null
-#  email           :string
-#  created_at      :datetime         not null
-#  updated_at      :datetime         not null
+#  id         :bigint           not null, primary key
+#  title      :string           not null
+#  year       :integer          not null
+#  band_id    :integer          not null
+#  album_type :boolean          default(FALSE), not null
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
