--- a/test/fixtures/bands.yml
+++ b/test/fixtures/bands.yml
@@ -1,14 +1,11 @@
 # == Schema Information
 #
-# Table name: users
+# Table name: bands
 #
-#  id              :bigint           not null, primary key
-#  user_name       :string           not null
-#  password_digest :string           not null
-#  session_token   :string           not null
-#  email           :string
-#  created_at      :datetime         not null
-#  updated_at      :datetime         not null
+#  id         :bigint           not null, primary key
+#  name       :string           not null
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
